<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/neighbourProfilDetail"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#9ECBD4DD"
    android:orientation="vertical"
    tools:context=".ui.neighbour_list.DetailsNeighbourActivity">

    <ImageView
        android:id="@+id/avatarDetail"
        android:layout_width="match_parent"
        android:layout_height="280dp"
        app:layout_constraintTop_toTopOf="parent"
        tools:srcCompat="@tools:sample/avatars"
        android:scaleType="centerCrop"/>

    <Button
        android:id="@+id/buttonBack"
        android:layout_width="56dp"
        android:layout_height="36dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:backgroundTint="#00DDDDDD"
        app:icon="?attr/actionModeCloseDrawable"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/prenom1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="14dp"
        android:layout_marginBottom="16dp"
        android:text=""
        android:textColor="#FFFFFF"
        android:textSize="32sp"
        app:layout_constraintBottom_toBottomOf="@+id/avatarDetail"
        app:layout_constraintLeft_toLeftOf="@+id/avatarDetail" />


    <android.support.v7.widget.CardView
        android:id="@+id/cardViewInfo"
        android:layout_width="372dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/avatarDetail">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/prenom2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="12dp"
                android:layout_marginTop="7dp"
                android:textColor="#000000"
                android:textSize="20sp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:layerType="software"/>

            <View
                app:layout_constraintTop_toBottomOf="@id/prenom2"
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:background="#9ECBD4DD"/>

            <ImageView
                android:id="@+id/imageLocation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="12dp"
                android:layout_marginTop="12dp"
                android:src="@drawable/ic_location_on_black_24dp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/prenom2" />

            <TextView
                android:id="@+id/adresse"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="12dp"
                android:layout_marginTop="12dp"
                app:layout_constraintLeft_toRightOf="@+id/imageLocation"
                app:layout_constraintTop_toBottomOf="@+id/prenom2" />

            <ImageView
                android:id="@+id/imagePhone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="12dp"
                android:layout_marginTop="12dp"
                android:src="@drawable/ic_phone_black_24dp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageLocation" />

            <TextView
                android:id="@+id/telephone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="12dp"
                android:layout_marginTop="12dp"
                app:layout_constraintLeft_toRightOf="@+id/imagePhone"
                app:layout_constraintTop_toBottomOf="@+id/adresse" />

            <ImageView
                android:id="@+id/imageSocial"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="12dp"
                android:layout_marginTop="12dp"
                android:layout_marginBottom="12dp"
                android:src="@drawable/ic_language_black_24dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imagePhone" />

            <TextView
                android:id="@+id/lienFacebook"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="12dp"
                android:layout_marginTop="12dp"
                app:layout_constraintLeft_toRightOf="@+id/imageSocial"
                app:layout_constraintTop_toBottomOf="@+id/telephone" />


        </android.support.constraint.ConstraintLayout>

    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:id="@+id/cardViewDescription"
        android:layout_width="372dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardViewInfo">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/aProposDeMoi"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="7dp"
                android:text="A propos de moi"
                android:textColor="#000000"
                android:textSize="20sp" />

            <View
                app:layout_constraintTop_toBottomOf="@id/aProposDeMoi"
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:background="#9ECBD4DD"/>

            <TextView
                android:id="@+id/aPropos"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:scrollbars="vertical" />
        </LinearLayout>

    </android.support.v7.widget.CardView>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/addFavourite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="12dp"
        android:backgroundTint="#FFFFFF"
        android:elevation="4dp"
        app:layout_constraintBottom_toBottomOf="@id/avatarDetail"
        app:layout_constraintRight_toRightOf="@id/avatarDetail"
        app:layout_constraintTop_toBottomOf="@+id/avatarDetail" />

</android.support.constraint.ConstraintLayout>